--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body,
 html {
     width: 100%;
     height: 100%;
-    background-image: url(/img/img1.jpg);
+    background-image: url(../img/img1.jpg);
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
     font-size: 16px;
     display: flex;
